Compressor and decompressor implementation already
working, although not correctly yet.

Updated Makefile

--- a/TODO.txt
+++ b/TODO.txt
@@ -2,4 +2,5 @@
 [ ] Test functions and structures
 [ ] Implement compressor
 [ ] Implement decompressor
+[ ] Update headers
 [ ] Organize code (remove redundant includes, organize functions, add comments, etc)
