Optimized compression and decompression

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,6 @@
-[ ] Write README.md
-[ ] Test functions and structures
+[X] Write README.md
+[X] Test functions and structures
 [X] Implement compressor
 [X] Implement decompressor
-[ ] Update headers
+[X] Update headers
 [ ] Organize code (remove redundant includes, organize functions, add comments, etc)
